fix. z-index 수정

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
   position: fixed;
   top: 1.2rem;
   right: 0.5rem;
-  z-index: 2800;
+  z-index: 250;
   
   img{
     width: 28px;
